src/rules/flake8_simplify/snapshots/ruff__rules__flake8_simplify__tests__SIM101_SIM101.py.snap
---
source: src/rules/flake8_simplify/mod.rs
expression: diagnostics
---
- kind:
    DuplicateIsinstanceCall: a
  location:
    row: 1
    column: 3
  end_location:
    row: 1
    column: 45
  fix:
    content: "isinstance(a, (int, float))"
    location:
      row: 1
      column: 3
    end_location:
      row: 1
      column: 45
  parent: ~
- kind:
    DuplicateIsinstanceCall: a
  location:
    row: 4
    column: 3
  end_location:
    row: 4
    column: 53
  fix:
    content: "isinstance(a, (int, float, bool))"
    location:
      row: 4
      column: 3
    end_location:
      row: 4
      column: 53
  parent: ~
- kind:
    DuplicateIsinstanceCall: a
  location:
    row: 7
    column: 3
  end_location:
    row: 7
    column: 68
  fix:
    content: "isinstance(a, (int, float)) or isinstance(b, bool)"
    location:
      row: 7
      column: 3
    end_location:
      row: 7
      column: 68
  parent: ~
- kind:
    DuplicateIsinstanceCall: a
  location:
    row: 10
    column: 3
  end_location:
    row: 10
    column: 68
  fix:
    content: "isinstance(a, (int, float)) or isinstance(b, bool)"
    location:
      row: 10
      column: 3
    end_location:
      row: 10
      column: 68
  parent: ~
- kind:
    DuplicateIsinstanceCall: a
  location:
    row: 13
    column: 3
  end_location:
    row: 13
    column: 68
  fix:
    content: "isinstance(a, (int, float)) or isinstance(b, bool)"
    location:
      row: 13
      column: 3
    end_location:
      row: 13
      column: 68
  parent: ~
- kind:
    DuplicateIsinstanceCall: a
  location:
    row: 16
    column: 4
  end_location:
    row: 16
    column: 46
  fix:
    content: "isinstance(a, (int, float))"
    location:
      row: 16
      column: 4
    end_location:
      row: 16
      column: 46
  parent: ~

