src/rules/flake8_simplify/snapshots/ruff__rules__flake8_simplify__tests__SIM103_SIM103.py.snap
---
source: src/rules/flake8_simplify/mod.rs
expression: diagnostics
---
- kind:
    ReturnBoolConditionDirectly: a
  location:
    row: 3
    column: 4
  end_location:
    row: 6
    column: 20
  fix:
    content: return a
    location:
      row: 3
      column: 4
    end_location:
      row: 6
      column: 20
  parent: ~
- kind:
    ReturnBoolConditionDirectly: b
  location:
    row: 13
    column: 4
  end_location:
    row: 16
    column: 20
  fix:
    content: return b
    location:
      row: 13
      column: 4
    end_location:
      row: 16
      column: 20
  parent: ~
- kind:
    ReturnBoolConditionDirectly: b
  location:
    row: 24
    column: 8
  end_location:
    row: 27
    column: 24
  fix:
    content: return b
    location:
      row: 24
      column: 8
    end_location:
      row: 27
      column: 24
  parent: ~

