src/rules/flake8_simplify/snapshots/ruff__rules__flake8_simplify__tests__SIM112_SIM112.py.snap
---
source: src/rules/flake8_simplify/mod.rs
expression: diagnostics
---
- kind:
    UseCapitalEnvironmentVariables:
      - FOO
      - foo
  location:
    row: 4
    column: 11
  end_location:
    row: 4
    column: 16
  fix:
    content: "'FOO'"
    location:
      row: 4
      column: 11
    end_location:
      row: 4
      column: 16
  parent: ~
- kind:
    UseCapitalEnvironmentVariables:
      - FOO
      - foo
  location:
    row: 6
    column: 15
  end_location:
    row: 6
    column: 20
  fix:
    content: "'FOO'"
    location:
      row: 6
      column: 15
    end_location:
      row: 6
      column: 20
  parent: ~
- kind:
    UseCapitalEnvironmentVariables:
      - FOO
      - foo
  location:
    row: 8
    column: 15
  end_location:
    row: 8
    column: 20
  fix:
    content: "'FOO'"
    location:
      row: 8
      column: 15
    end_location:
      row: 8
      column: 20
  parent: ~
- kind:
    UseCapitalEnvironmentVariables:
      - FOO
      - foo
  location:
    row: 10
    column: 10
  end_location:
    row: 10
    column: 15
  fix:
    content: "'FOO'"
    location:
      row: 10
      column: 10
    end_location:
      row: 10
      column: 15
  parent: ~

