src/rules/flake8_simplify/snapshots/ruff__rules__flake8_simplify__tests__SIM117_SIM117.py.snap
---
source: src/rules/flake8_simplify/mod.rs
expression: diagnostics
---
- kind:
    MultipleWithStatements: ~
  location:
    row: 1
    column: 0
  end_location:
    row: 2
    column: 18
  fix: ~
  parent: ~
- kind:
    MultipleWithStatements: ~
  location:
    row: 5
    column: 0
  end_location:
    row: 7
    column: 17
  fix: ~
  parent: ~

